added get and post

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,3 +22,10 @@
     </p>
   </div>
 </div>
+
+<div class="container color-light">
+  <div class="col">
+    <button (click)="doGET()">GET</button>
+    <button (click)="doPOST()">POST</button>
+  </div>
+</div>
